Fixed nav alignment

--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -12,11 +12,8 @@ header {
   padding: 0 2rem;
   background-color: aquamarine;
   color: black;
-}
-
-header h3 {
-  display: flex;
-  align-items: center;
+  width: 100%;
+  justify-content: space-between;
 }
 
 header nav {
@@ -65,6 +62,7 @@ header .nav-btn {
     gap: 1.5rem;
     background-color: aquamarine;
     transition: 1s;
+    z-index: 999;
     transform: translateY(-100vh);
   }
 
